多页面配置

--- a/模块规范.md
+++ b/模块规范.md
@@ -1,12 +1,12 @@
 ## CommonJs
 ```javascript
-//moudle-a.js
-moudle.exports = {
+//module-a.js
+module.exports = {
     a: 1
 };
 
-//moudle-b.js
-var ma = require('./moudle-a');
+//module-b.js
+var ma = require('./module-a');
 var b = ma.a + 2;
 module.exports ={
     b: b
